[gd_scene load_steps=2 format=3 uid="uid://6huud8ymwswi"]

[ext_resource type="Script" uid="uid://cqs1kj601i0x3" path="res://app.gd" id="1_wh5kp"]

[node name="App" type="Node2D"]
script = ExtResource("1_wh5kp")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProfilePanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ProfileLabel" type="Label" parent="Control/ProfilePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Happiness Forecast
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CentralPanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.109
anchor_right = 1.0
anchor_bottom = 0.891
offset_top = 0.239998
offset_bottom = -0.23999
grow_horizontal = 2
grow_vertical = 2

[node name="PageSelect" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.906
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.159973
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="Control/PageSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Graph >"

[connection signal="pressed" from="Control/PageSelect/Button" to="." method="_on_page_select_pressed"]
